--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.1",
     "@types/node": "^20.3.1",
+    "@types/pg": "^8.10.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "@types/pg": "^8.10.2",
-    "@types/amqplib": "^0.10.1",
-    "typescript": "^5.1.3",
-    "tailwindcss": "^3.3.2",
-    "postcss": "^8.4.24",
+    "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.3",
     "vite": "^4.0.0"
   }
 }
