--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pg": "^8.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "dotenv": "^16.1.4" 
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.1",
