--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "name": "whatsapp-viewer",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "dist/server.js",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "start": "node server.js"
+    "build:client": "vite build",
+    "build:server": "tsc -p tsconfig.server.json",
+    "build": "npm run build:client && npm run build:server",
+    "start": "node dist/server.js"
   },
   "dependencies": {
     "amqplib": "^0.10.3",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "lucide-react": "^0.252.0",
     "pg": "^8.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1",
-    "dotenv": "^16.1.4" 
+    "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.1",
+    "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "@types/pg": "^8.10.2",
     "@types/react": "^18.2.14",
